[HT-3] Missing API responses
