# app/controllers/api/v1/challenges_controller.rb
@@ -9,6 +9,7 @@ module Api
         authorize(ChallengeTemplate)
 
         @challenges = policy_scope(ChallengeTemplate.kept)
+        @challenges = filter_by_category(@challenges) if params[:category_id] || params[:category_slug]
       end
 
       def show
@@ -50,6 +51,16 @@ module Api
 
       def challenge_params
         params.require(:challenge).permit(:title, :description, :period_type, :privacy_type, rules: {})
+      end
+
+      def filter_by_category(scope)
+        if params[:category_id].present?
+          scope.joins(:categories).where(categories: { id: params[:category_id] })
+        elsif params[:category_slug].present?
+          scope.joins(:categories).where(categories: { slug: params[:category_slug] })
+        else
+          scope
+        end.distinct
       end
     end
   end
